--- a/index.css
+++ b/index.css
@@ -1,8 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 .main-card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 
+    width: 810px;
 }
 
 h2 {
@@ -13,14 +19,17 @@ h2 {
 .top-card {
     display: flex;
 
-    height: 437px;
-    width: 810px;
     background-color: #F2F5F9;
 
     margin: 16px 0px 24px;
     padding: 48px 48px 16px;
 
     border-radius: 1%;
+
+}
+
+.w-50 {
+    width: 50%;
 }
 
 .top-card-left {
@@ -29,8 +38,7 @@ h2 {
     justify-content: flex-start;
     align-items: flex-start;
 
-    width: 369px;
-    height: 372.7px;
+
 }
 
 .top-banner {
@@ -41,13 +49,13 @@ h2 {
     padding: 0.3em 0.8em 0.3em 0.8em;
     color: #FFFFFF;
     background-color: #9C195B;
-    
+
     font-size: 12px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .top-banner-title {
-    margin: 0px 0px 8px ;
+    margin: 0px 0px 8px;
 
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -69,13 +77,11 @@ h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
     cursor: pointer;
-
 }
 
 .top-card-button:hover {
-     
+
     background-color: #940F62;
-    
 }
 
 
@@ -108,52 +114,50 @@ h2 {
     flex-direction: column;
 }
 
-.first-container, .second-container, .third-container {
+.text-container {
     display: flex;
 
 }
 
-.first-item, .second-item, .third-item {
+.text-container-item {
     font-size: 18px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.bottom-cards {
+.bottom-card-container {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; ??? */
-    gap: 2.8em;
+    gap: 16px;
 
-    
+
 }
 
-.left-bottom-card {
+.bottom-card {
     display: flex;
 
-    width: 393px;
     height: 190px;
 
     padding: 24px 16px 16px;
-    border-radius: 1%;
-    border: 2px solid gray;
+    border-radius: 8px;
+    border: 1px solid gray;
     border-style: ridge;
 
     cursor: pointer;
 
 }
 
-.left-bottom-card-right{
+.left-bottom-card-right {
     display: flex;
     flex-wrap: wrap;
     padding: 0px 0px 0px 12px;
 }
 
-.left-bottom-card-title{
+.left-bottom-card-title {
     margin: 0px 0px 8px;
 }
 
 
-.left-bottom-card-subtitle{
+.left-bottom-card-subtitle {
     margin: 0px 0px 8px;
     color: #5E737D;
 
@@ -169,30 +173,13 @@ h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.right-bottom-card {
-    display: flex;
-
-    width: 393px;
-    height: 190px;
-
-    padding: 24px 16px 16px;
-    border-radius: 1%;
-    border: 2px solid gray; 
-    border-style: ridge;
-
-    cursor: pointer;
-    
-
-}
-
 .right-bottom-card-right {
     display: flex;
     flex-wrap: wrap;
     padding: 0px 0px 0px 12px;
-    /* align-content: space-between; */
 }
 
-.right-bottom-card-title{
+.right-bottom-card-title {
     margin: 0px 0px 8px;
 }
 
@@ -215,6 +202,3 @@ h2 {
 .fa-long-arrow-right {
     margin-left: 1em;
 }
-
-
-
