--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ h2 {
     margin: 16px 0px 24px;
     padding: 48px 48px 16px;
 
-    border-radius: 1%;
+    border-radius: 8px;
 
 }
 
@@ -211,10 +211,14 @@ h2 {
 
 #hidden-tab {
     display: none;
+    flex-direction: column;
 
     background-color: #F2F5F9;
     width: 810px;
     padding: 24px;
+
+    border-radius: 8px;
+
 }
 
 .carousel-banner {
@@ -223,6 +227,8 @@ h2 {
     border: none;
     cursor: pointer;
 
+    margin: 0;
+    
 
 }
 
@@ -239,6 +245,8 @@ h2 {
 
 #carousel-top {
     margin-right: 12px;
+    margin-bottom: 4px;
+
 }
 
 .carousel-title-right {
@@ -267,6 +275,65 @@ h2 {
         border-width: 0 3px 3px 0;
         display: inline-block;
         padding: 3px;
-        transform: rotate(-135deg);
+        transform: rotate(45deg);
         margin-left: 6px;      
+}
+
+.subtitle-carousel {
+    color:  #5E737D;
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+    margin-top: 0;
+    margin-bottom: 24px;
+    align-self: flex-start;
+}
+
+.carousel-nav {
+    display: flex;
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 0px 12px;
+    align-self: flex-start;
+    
+    
+}
+
+.top-carousel-button {
+    display: flex;
+    background-color: #DBE2E6;
+    border-radius: 50px;
+    margin-right: 8px;
+    padding: 1px 16px;
+    height: 42px;
+    
+    align-items: center;
+    justify-items: center;
+
+    cursor: pointer;
+    
+}
+
+.top-carousel-button:hover {
+    background-color: #7C8A9C ;
+}
+
+.highligth-carousel {
+    display: flex;
+    background-color: black;
+    color: #FFFFFF;
+    border-radius: 50px;
+    margin-right: 8px;
+    padding: 1px 16px;
+    height: 42px;
+    
+    align-items: center;
+    justify-items: center;
+
+    cursor: pointer;
+}
+
+.fa-close {
+    align-self: flex-end;
 }
