--- a/index.css
+++ b/index.css
@@ -218,6 +218,7 @@ h2 {
     padding: 24px;
 
     border-radius: 8px;
+    margin-bottom: 24px;
 
 }
 
@@ -354,16 +355,53 @@ h2 {
 
     padding-bottom: 8px;
     margin-bottom: 16px;
+    margin-left: 8px;
 
 
 }
 
 .carousel-card {
     display: flex;
+    flex-direction: column;
     margin-right: 16px;
     height: 274.5px;
     width: 224px;
-    background-color: #9C195B;
+    border: 1px solid #5E737D;
 
     flex-shrink: 0;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+#bottom-carousel-btn {
+    font-size: 18px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    align-self: flex-start;
+}
+
+img {
+    width: 100%;
+    height: 45%;
+    border-radius: 8px 8px 0px 0px;
+    
+}
+.carousel-text-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 12px 12px 16px;
+}
+
+.carousel-card-title {
+    margin-bottom: 8px;
+    margin-top: 0px;
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.carousel-card-subtitle {
+    margin: 0;
+    font-size: 14px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
